--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,23 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: Welcome
+description: 'The Hesitant Diasporan''s Guide to Moving to Armenia'
 ---
 
-## Setting up
+# Full Repatriation Guide
 
-Get your documentation site up and running in minutes.
+Welcome to the digital edition of the **Full Repatriation Guide**. This documentation is designed to help you navigate the process of moving to Armenia with confidence.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## What's Inside?
 
-## Make it yours
+We are currently converting the comprehensive PDF guide into an easy-to-navigate online resource.
 
-Design a docs site that looks great and empowers your users.
+Stay tuned as we add chapters on:
+- Pre-departure planning
+- Legal requirements
+- Finding housing
+- Employment and business
+- Daily life in Armenia
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+## Get Started
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+Select a topic from the navigation menu to begin your journey.
