--- a/essentials/financials.mdx
+++ b/essentials/financials.mdx
@@ -11,7 +11,7 @@ Managing your finances is a crucial part of settling in.
 There are 18 banks operating in Armenia, including local and international subsidiaries.
 
 ### International Subsidiaries
-*   **Byblos Bank Armenia**: Focus on retail banking (loans, deposits).
+*   **Byblos Bank Armenia**: Focus on retail banking (loans, deposits). Offers a **Diaspora Housing Loan** for non-residents.
 *   **Mellat Bank**: Iranian bank. Often the only option for Iranians without Armenian citizenship.
 *   **VTB Bank Armenia**: Russian subsidiary with a wide branch network.
 
@@ -20,5 +20,31 @@ There are 18 banks operating in Armenia, including local and international subsi
 *   **Ameriabank**: Universal bank with corporate and retail services. Offers premium services.
 *   **Araratbank**: Offers various loans and "ArCa Child" cards.
 *   **Ardshinbank**: Large network, focuses on project financing and retail. Recently acquired HSBC Armenia.
+*   **Artsakhbank**: Assists SMEs, offers pension accounts.
+*   **Evocabank**: Positions itself as the first digital bank. Offers "Affordable Housing for Young Families" loans.
+*   **Amio Bank**: Offers high deposit savings rates.
+*   **Armeconombank**: Offers "Women in business" trade loans.
+*   **ArmSwissBank**: Private investment bank offering wealth management services.
+*   **Converse Bank**: Good for e-commerce and trade financing. Offers access to Zvartnots business lounge for some cardholders.
+*   **Inecobank**: User-friendly app (InecoMobile), InecoPay, and high savings rates. Good for opening accounts for Iranian-Armenians.
+*   **Unibank**: Specializes in retail and private banking.
+*   **ID Bank**: Offers micro-loans and energy-efficient renovation loans ("Jerm Ojakh").
+*   **Fastbank**: 24/7 services in branches.
 
-*(More details on banking services to follow in upcoming sections)*
+## ATMs and Payments
+*   **ATMs**: Widely available. Dispense **AMD only**. Watch out for withdrawal fees.
+*   **Card Payments**: Accepted in most stores (even small ones). Visa and Mastercard are standard.
+*   **Credit Cards**: Less common than debit cards; high interest rates.
+
+## Currency Exchange
+*   **Apps**: Use `rate.am` to find the best exchange rates.
+*   **Locations**: Banks, supermarkets (SAS often has good rates), and exchange kiosks.
+
+## Loans
+*   **Guarantors**: Often required. A guarantor must be a legal adult, resident/citizen, with steady income. They take on full responsibility if you default.
+
+## Savings Accounts
+*   **Interest Rates**: AMD accounts offer the highest rates (up to ~10%), followed by USD, then EUR.
+*   **Tax**: 10% income tax is deducted from interest earned.
+
+*(See specific bank websites for current deposit terms)*
