--- a/content/work-finance/taxes.mdx
+++ b/content/work-finance/taxes.mdx
@@ -30,7 +30,8 @@ You must choose a tax regime within **20 days** of registration.
 ### Special Taxes
 *   **Excise Tax**: On alcohol, tobacco, fuel (increases annually).
 *   **Environmental & Road Taxes**: Depending on business activity.
-*   **Property Tax**: Based on cadastral value.
+*   **Property Tax**: Based on cadastral value. Rates vary by property value (0.05% - 1%).
+*   **Land Tax**: 15% for agricultural land, 0.5-1% for other types.
 
 ## Import Taxes
 *   **VAT**: 20% on imported goods (unless from EAEU countries: Russia, Belarus, Kazakhstan, Kyrgyzstan).
@@ -39,3 +40,8 @@ You must choose a tax regime within **20 days** of registration.
     *   **Air**: 50kg / 10,000 EUR limit.
     *   **Land**: 25kg / 500 EUR limit.
     *   **Post**: 31kg / 200 EUR limit.
+
+## Filing Taxes
+*   **Individuals**: Generally do not need to file if income is from an Armenian employer (tax agent).
+*   **Entrepreneurs**: Must register and file according to their chosen regime.
+*   **Inspections**: Tax authorities must provide 3 days notice for inspections (with some exceptions).
