--- a/content/index.mdx
+++ b/content/index.mdx
@@ -5,18 +5,19 @@ description: 'The Hesitant Diasporan''s Guide to Moving to Armenia'
 
 # Full Repatriation Guide
 
-Welcome to the digital edition of the **Full Repatriation Guide**. This documentation is designed to help you navigate the process of moving to Armenia with confidence.
+**August 2025**
 
-## What's Inside?
+At last! You are here in Armenia. Welcome to a new life, full of adventure, discovery, and friendships. You will find that there is so much to learn here, from much-loved celebrations to the little nuances that make this a unique country to live in.
 
-We are currently converting the comprehensive PDF guide into an easy-to-navigate online resource.
+This full guide should help you get acquainted with the country as well as provide you with essential information on everything from emergency contacts to registration processes. **WELCOME!**
 
-Stay tuned as we add chapters on:
-- Pre-departure planning
-- Legal requirements
-- Finding housing
-- Employment and business
-- Daily life in Armenia
+## Disclaimer
+
+Please note that any information in this guide is for general information purposes only, and does not constitute legal, professional, commercial or other advice. You should always seek independent legal, professional, commercial or other advice before acting or relying on any of this information.
+
+In addition, while Repat Armenia Foundation has made every effort to make sure the information in this guide is up to date, it does not guarantee the accuracy and currency of such information. Costs and details are subject to change.
+
+*Accurate as of August 2025.*
 
 ## Get Started
 
