--- a/content/move/first-steps.mdx
+++ b/content/move/first-steps.mdx
@@ -20,15 +20,23 @@ Stay connected immediately.
 *   **Note**: You need your passport. A deposit may be required for modems if you don't have a registered address (*grantsoum*) yet.
 
 ## 3. Open a Bank Account
-You will need this for salaries, benefits, and daily life.
-*   **Documents**: Passport, Social Security Number (SSN), and sometimes proof of registered address.
-*   **Tips**: Use the **Earlyone** app to book appointments. Banks in the city center are busier; try smaller branches or off-peak hours (morning/3 PM).
+Opening a bank account is a general necessity. In Armenia, it is used to:
+*   Deposit your money (most have at least two accounts - AMD + USD/EUR/RUB)
+*   Get paid or receive government-provided benefits
+
+**Process:**
+*   **Documents**: Passport, Social Security Number (SSN), and sometimes proof of registered address (*grantsoum*).
+*   **At the Bank**: All banks have kiosks where you take a number based on your needs. Wait for your number to appear on the screen.
+*   **Tips**: 
+    *   Use the **Earlyone** app to book appointments and avoid wait times. 
+    *   Banks in the city center are busier; try smaller branches or off-peak hours (morning or around 3 PM).
+    *   Expect longest wait times around lunch and closing.
 
 ## 4. Register Your Residence (*Grantsoum*)
 Do this as soon as you have your residency card or citizenship.
 1.  Go to your local police station with your card/passport.
 2.  Fill out the form with your address and phone number.
-3.  A police officer will visit your home (usually within a week) to verify you live there.
+3.  A police officer will visit your home (usually within a week) to verify you live there (without prior notification).
 4.  Pick up your stamped card/passport at the station.
 *   **Important**: You need a notarized rent contract. Inform your landlord beforehand.
 
@@ -38,25 +46,58 @@ Required for work, banking, and benefits.
 *   **Bring**: Passport with registered address stamp.
 *   **Tip**: Keep a digital scan of your SSN document.
 
+**You will need your SSN for:**
+*   Opening bank accounts
+*   Obtaining various licenses
+*   Paying taxes / receiving a salary
+*   Poverty family benefits
+*   Unemployment benefits
+*   Old age pensions
+*   Disability pensions
+*   Any other government assistance programs
+
 ## 6. Healthcare Registration
 Register at your local **polyclinic** for free basic services.
 1.  Find your nearest polyclinic (see Medical section).
 2.  Bring passport/residency card and SSN.
 3.  Sign an agreement.
 
-**Insurance**: Consider corporate packages. Repat Armenia offers a group package with **Nairi Insurance** (~130,000 AMD/year).
+**Coverage includes:**
+*   Home visit of a physician
+*   Emergency care and transportation
+*   In-patient treatment
+*   Outpatient treatment
+*   Cardiology & Angiosurgery
+*   Partial oncology and chronic diseases
+*   Pregnancy and childbirth
+*   Preventative examinations
+*   Drugs and medical supplies
+*   Ophthalmological services
+*   Dental services
 
-## 7. Education
+**Insurance**: 
+In Armenia, individual insurance is less common. Repat Armenia offers a **group insurance package** with **Nairi Insurance**:
+*   **Cost**: ~130,000 AMD annually (30% discount for families of 3 or more).
+*   **Coverage**: Up to 7 million AMD in medical bills.
+
+## 7. Improve Your Armenian
+Eastern Armenian is the official language. Here is how you can start learning:
+1.  **Online**: Websites and apps like **AYOlingo** or the **Armenian Virtual College**.
+2.  **Private Lessons**: Many private tutors are available (search the Repat Armenia network).
+3.  **Media**: Read online newspapers, books (classics and contemporary), or watch Armenian TV/series.
+4.  **Free Classes**: Follow Repat Armenia or the **Repatriation and Integration Center of the Diaspora Office** for announcements of free language courses.
+
+## 8. Education
 Register children at kindergarten or school early. Options include public and private institutions.
 *See Education section for details.*
 
-## 8. Employment
+## 9. Employment
 Start applying!
 *   Update your CV (American style preferred).
 *   Network actively (LinkedIn, Facebook groups like *Jobs for repats and expats in Armenia*).
 *   **Salaries**: Min wage is 75,000 AMD. Average is ~297,624 AMD (as of June 2025).
 
-## 9. Entrepreneurship
+## 10. Entrepreneurship
 If starting a business:
 1.  Develop a plan.
 2.  Do market research.
