--- a/content/work-finance/financials.mdx
+++ b/content/work-finance/financials.mdx
@@ -7,6 +7,15 @@ description: Banking and money management in Armenia
 
 Managing your finances is a crucial part of settling in.
 
+## Moving Money to Armenia
+Moving your financial assets to Armenia is relatively straightforward:
+
+1.  **Cash**: You can bring up to **$10,000** (or equivalent) without declaration. Amounts over $10,000 must be declared at customs.
+    *   *Note: Import and export of local currency is prohibited.*
+2.  **Bank Transfer**: For amounts over $10,000, International SWIFT transfers are recommended.
+3.  **Money Transfer Services**: Fast transfers via MoneyGram, Unistream, Best, Moneytun (USA-Armenia-USA), Intelexpress, Converse Transfer (Russia-Armenia-Russia), and RIA.
+4.  **Online**: Some banks allow opening accounts online.
+
 ## Banks in Armenia
 There are 18 banks operating in Armenia, including local and international subsidiaries.
 
