--- a/content/move/planning.mdx
+++ b/content/move/planning.mdx
@@ -71,6 +71,7 @@ Eastern Armenian is the official language. Knowledge of Russian and English is a
 ## Step 8: Financial Assets
 Moving money to Armenia:
 1.  **Cash**: You can bring up to $10,000 without declaration. Amounts over $10,000 must be declared.
+    <Note>Import and export of local currency is prohibited.</Note>
 2.  **Bank Transfer**: Recommended for amounts over $10,000 via SWIFT.
 3.  **Money Transfer Services**: MoneyGram, Unistream, etc.
 4.  **Online Accounts**: Some banks allow opening accounts online.
