--- a/content/living/cost-of-living.mdx
+++ b/content/living/cost-of-living.mdx
@@ -27,11 +27,13 @@ Costs vary greatly based on lifestyle, but here are some estimates to help you b
 ### Utilities
 *   Includes electricity, gas, water, internet/TV/phone.
 *   **Heating**: Decentralized (gas boilers) is common; costs vary by season and building insulation.
-*   **Payment**: Easy via banking apps, terminals (Telcell, EasyPay), or post offices.
+*   **Payment**: Easy via banking apps, terminals (Telcell, EasyPay, iDram, UPay), or post offices.
+*   **Billing**: Bills are available online from the 8th of the month; payment is due by the 20th.
 
 ### Rent
 *   Varies by location (center vs. outskirts) and building condition (new vs. old).
 *   **Tip**: Consider sharing an apartment or living outside the center to save money.
+*   **Resources**: Check Facebook groups like *Find Flatmates/Roommates in Yerevan!* and *Repats&Expats: Real Estate in Armenia*.
 
 ### Transportation
 *   **Public**: Buses, minibuses, Metro (Yerevan only). Affordable fares.
