--- a/content/living/getting-around.mdx
+++ b/content/living/getting-around.mdx
@@ -26,6 +26,9 @@ description: Public transport, driving, and taxis
 ## Driving
 *   **License**: International Driver's Permits are accepted. Residents may need to convert to a local license.
 *   **Traffic**: Can be chaotic. Watch for speed cameras and red light cameras.
+*   **Parking**:
+    *   **Red Lines**: Paid parking zones (A and B). First 15 minutes are free.
+    *   **Payment**: Via SMS, terminals, or apps.
 
 ## Micromobility
 *   **Scooters**: `Jet`, `Mimo`, `BusyFly`.
