--- a/content/work-finance/employment.mdx
+++ b/content/work-finance/employment.mdx
@@ -9,13 +9,22 @@ Finding a job is a top priority for most repatriates.
 
 ## Job Search Resources
 *   **Repat Armenia Careers**: Quality jobs with reasonable pay (>$500).
-*   **Facebook Groups**: *Jobs for Repats and Expats in Armenia*, *HR.AM CLUB*.
+*   **Facebook Groups**: *Jobs for Repats and Expats in Armenia*, *HR.AM CLUB*, *Գործ Կա*.
 *   **Job Sites**: `staff.am`, `careercenter.am`, `jobfinder.am`, `hire.am`, `job.am`.
-*   **Networking**: Crucial in Armenia. Talk to people and attend events.
+*   **Networking**: Crucial in Armenia. Talk to people and attend events. The more people you meet, the easier your integration process will be.
 
-## Resumes
-*   **Style**: American style preferred (concise, 1 page).
-*   **Format**: Focus on skills and value.
+## Application Tips
+1.  **Diplomas**: Bring your diplomas and certificates. While most may not ask, international institutions often require originals.
+2.  **Resumes**: Most Armenian companies prefer an **American style** (concise, single page) CV. Focus on skills and value.
+3.  **Language**: Learning Armenian (at least conversational) and potentially Russian greatly increases your hiring chances.
+
+## Salaries
+*   **Minimum Wage**: 75,000 AMD.
+*   **Typical Range**: 150,000 - 300,000 AMD.
+*   **Average**: ~297,624 AMD (as of June 2025).
+
+## Support
+Repat Armenia offers career counseling and resume writing assistance. Contact our Case Manager at `repatriation@repatarmenia.org`.
 
 ## Work Permits
 As of 2019, foreigners (non-citizens/non-residents) need a work permit.
