--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -36,13 +36,37 @@ Do not bring items for business use, construction materials (pipes, toilets), or
 3.  **Submit to Customs**: Send this document and your list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
 4.  **Clear Customs**: Go to the cargo office to pick up items.
 
+### Required Paperwork
+*   Original Bill of Lading (OBL)
+*   Packing list
+*   Pro-forma invoice
+*   Transportation cost information
+*   Detailed inventory including values
+*   Copy of Passport
+*   Copy of Visa
+*   Letter of employment
+
+### Costs & Fees
+*   **Customs Clearance Fee**: ~7,000 AMD.
+*   **Other Costs**: Packing, shipping, and warehousing costs are the responsibility of the repatriate.
+
+### EAEU Regulations
+For movement of goods within the **EAEU**, customs clearance generally doesn't apply. However, since Armenia doesn't share borders with other EAEU members, if transporting by road (via Georgia), a **customs declaration** should be filled out in the exporting country.
+
 ## Shipping by Post
 *   **Tax-Free Limit**: 31 kg and 200 EUR value (from non-EAEU countries).
 *   **Over Limit**: 15% duty on the excess value (min 2 EUR per extra kg).
 
 ## Pets
-Requires:
-*   Veterinary health certificate (clearing Rabies).
-*   Pet passport.
-*   Photo of pet.
-*   Permission from Ministry of Environment (for wild animals).
+Importing pets requires:
+*   **Veterinary Health Certificate**: Clearing the animal of Rabies and other diseases.
+*   **Vaccination Certificate**.
+*   **Pet Passport**.
+*   **Photo of the pet**.
+*   **Permission from Ministry of Environment**: Required for wild animals.
+
+## Contact Customs
+If you have doubts, contact the **Customs Service of the Republic of Armenia**:
+*   **Address**: 3, 7 Movses Khorenatsi St., Yerevan
+*   **Phone**: +374 (60) 54 44 44, +374 (60) 54 46 57
+*   **Email**: `49797259@e-citizen.am`, `secretariat@petekamutner.am`
