--- a/content/work-finance/entrepreneurship.mdx
+++ b/content/work-finance/entrepreneurship.mdx
@@ -7,6 +7,14 @@ description: Starting and running a business in Armenia
 
 Starting a business in Armenia is relatively straightforward. Foreigners can own 100% of a company, and there are no requirements for local partners or employees.
 
+## Guiding Steps
+If you have an idea for a business:
+1.  **Develop your idea.**
+2.  **Create a business plan** and presentation.
+3.  **Do market research.**
+4.  **Contact Repat Armenia**: We can put you in touch with professional accounting, legal, and consultancy services, as well as experienced repatriate entrepreneurs.
+5.  **Promotion**: We also provide promotion support upon request.
+
 ## Registration
 *   **Process**: Takes less than a day (with sample documents) or up to 3 days.
 *   **Where**: Register at the State Register of Legal Entities (`e-register.am`).
