--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -15,7 +15,8 @@ You may be eligible if you are:
 3.  A refugee.
 
 **Residency Requirement**: You must not have lived in Armenia for more than **915 days** (2.5 years) in the last **5 years**.
-*   **Timeframe**: You have **18 months** from obtaining your status/certificate to import goods tax-free.
+*   **Registration Deadline**: You must register your address (*grantsoum*) within **180 days** of your actual arrival in Armenia.
+*   **Import Timeframe**: You have **18 months** from obtaining your status/certificate to import goods tax-free.
 
 **Alternative Option**: If you haven't lived in Armenia for >12 months in the last 420 days, you can import up to **5,000 EUR** value (excluding cars).
 
