--- a/content/index.mdx
+++ b/content/index.mdx
@@ -22,3 +22,7 @@ In addition, while Repat Armenia Foundation has made every effort to make sure t
 ## Get Started
 
 Select a topic from the navigation menu to begin your journey.
+
+---
+
+© 2025 All Rights Reserved Repat Armenia Foundation
