--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -19,6 +19,7 @@ You may be eligible if you are:
 *   **Import Timeframe**: You have **18 months** from obtaining your status/certificate to import goods tax-free.
 
 **Alternative Option**: If you haven't lived in Armenia for >12 months in the last 420 days, you can import up to **5,000 EUR** value (excluding cars).
+*   *Note*: You must submit a written request within **60 days** of arrival. This option is available once every 3 years.
 
 ## What You Can Bring
 *   **Personal Items**: Unlimited clothing, books, etc.
@@ -26,29 +27,39 @@ You may be eligible if you are:
 *   **Furniture**: 1 set per room type.
 *   **Car**: 1 vehicle owned for at least 6 months prior to move.
 
-<Warning>
-Do not bring items for business use, construction materials (pipes, toilets), or large quantities of new electronics in sealed boxes.
-</Warning>
+### Packing Rules & Restrictions
+*   **Condition**: Items must be **used** (no original sealed packaging).
+*   **Weight**: Boxes should not exceed **25 kg** each.
+*   **Prohibited**: Do not pack liquids, food, medication, or flammable items.
+*   **Pro Tip**: Remove all batteries from toys and electronics.
+*   **Business Use**: Do not bring items for business use, construction materials (pipes, toilets), or large quantities of electronics.
 
 ## The Process
 
 1.  **Get Status**: Obtain residency/citizenship and register your address (*grantsoum*).
+    *   *Cost*: Grantsoum costs ~1,000 AMD.
+    *   *Tip*: Ensure your local contact number is on your boxes so you can be notified of arrival.
 2.  **Apply for Certificate**: Apply at the Passport and Visa Department for a document confirming your move for permanent residence.
-3.  **Submit to Customs**: Send this document and your list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
+    *   *Timeline*: Usually issued within **5 working days**.
+3.  **Submit to Customs**: Send your documents and list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
+    *   *Processing*: Customs should process the application within **3 working days**.
 4.  **Clear Customs**: Go to the cargo office to pick up items.
+    *   *Warehouse Fees*: **Free for the first 48 hours**. After that, fees are ~10,000 - 20,000 AMD per day depending on volume.
 
 ### Required Paperwork
-*   Original Bill of Lading (OBL)
-*   Packing list
-*   Pro-forma invoice
-*   Transportation cost information
-*   Detailed inventory including values
-*   Copy of Passport
-*   Copy of Visa
-*   Letter of employment
+*   **Proof of Status**: Document confirming RA citizenship, residency, or refugee status.
+*   **Proof of Move**: Document from Passport & Visa Dept confirming move for permanent residence.
+*   **Proof of Foreign Residence**: Foreign passport or residence permit confirming residence abroad.
+*   **Transport Documents**: Original Bill of Lading (OBL), Packing list, Pro-forma invoice, Transportation cost info.
+*   **Inventory**: Detailed inventory including values.
+*   **Vehicle Documents**: Registration and ownership certificate (if importing a car).
+*   **Employment Letter**: (Often requested).
+
+*Note: Armenian translations of documents may be requested.*
 
 ### Costs & Fees
 *   **Customs Clearance Fee**: ~7,000 AMD.
+*   **Warehouse Fees**: Free for 48h, then daily fees apply.
 *   **Other Costs**: Packing, shipping, and warehousing costs are the responsibility of the repatriate.
 
 ### EAEU Regulations
