--- a/content/work-finance/financials.mdx
+++ b/content/work-finance/financials.mdx
@@ -21,39 +21,54 @@ There are 18 banks operating in Armenia, including local and international subsi
 
 ### International Subsidiaries
 *   **Byblos Bank Armenia**: Focus on retail banking (loans, deposits). Offers a **Diaspora Housing Loan** for non-residents.
-*   **Mellat Bank**: Iranian bank. Often the only option for Iranians without Armenian citizenship.
-*   **VTB Bank Armenia**: Russian subsidiary with a wide branch network.
+*   **Mellat Bank**: Iranian bank (Est. 1992). Often the only option for Iranians without Armenian citizenship.
+*   **VTB Bank Armenia**: Russian subsidiary with the widest branch network (67 branches).
 
 ### Armenian Banks
-*   **Acba Bank**: Leading institution, exclusive partner of American Express. Good digital platform.
-*   **Ameriabank**: Universal bank with corporate and retail services. Offers premium services.
-*   **Araratbank**: Offers various loans and "ArCa Child" cards.
-*   **Ardshinbank**: Large network, focuses on project financing and retail. Recently acquired HSBC Armenia.
-*   **Artsakhbank**: Assists SMEs, offers pension accounts.
-*   **Evocabank**: Positions itself as the first digital bank. Offers "Affordable Housing for Young Families" loans.
+*   **Acba Bank**: Leading institution, exclusive partner of American Express and services JCB cards. Has a free digital platform and 63 branches.
+*   **Ameriabank**: Universal bank with corporate and retail services. Shareholders include ADB and EBRD. Offers premium services and online account opening. Also offers a housing loan program similar to Byblos.
+*   **Araratbank**: Absorbed Armenian Development Bank. Offers "ArCa Child" cards for Child Care Benefits.
+*   **Ardshinbank**: Large network, focuses on project financing and energy sector. Acquired HSBC Armenia in 2024 (renamed to **Ardshininvestbank**).
+*   **Artsakhbank**: Assists SMEs, offers "ArCa Pension" cards.
+*   **Evocabank**: Positions itself as the first digital bank. Offers "Affordable Housing for Young Families" loans and StroyMaster Domophone payments.
 *   **Amio Bank**: Offers high deposit savings rates.
-*   **Armeconombank**: Offers "Women in business" trade loans.
+*   **Armeconombank**: Offers "Women in business" trade loans (tourism, agriculture).
 *   **ArmSwissBank**: Private investment bank offering wealth management services.
-*   **Converse Bank**: Good for e-commerce and trade financing. Offers access to Zvartnots business lounge for some cardholders.
-*   **Inecobank**: User-friendly app (InecoMobile), InecoPay, and high savings rates. Good for opening accounts for Iranian-Armenians.
-*   **Unibank**: Specializes in retail and private banking.
+*   **Converse Bank**: Good for e-commerce and trade financing. Offers **CAD accounts** and access to Zvartnots business lounge for some cardholders.
+*   **Inecobank**: High savings rates, user-friendly app (InecoMobile), and InecoPay. **Easily opens accounts for Iranian-Armenians**. Offers free Social Package accounts.
+*   **Unibank**: Specializes in retail/private banking. Unistream transfers available via app.
 *   **ID Bank**: Offers micro-loans and energy-efficient renovation loans ("Jerm Ojakh").
-*   **Fastbank**: 24/7 services in branches.
+*   **Fastbank**: 24/7 services in 33 branches.
 
 ## ATMs and Payments
 *   **ATMs**: Widely available. Dispense **AMD only**. Watch out for withdrawal fees.
 *   **Card Payments**: Accepted in most stores (even small ones). Visa and Mastercard are standard.
-*   **Credit Cards**: Less common than debit cards; high interest rates.
+*   **Credit Cards**: Less common than debit cards; high interest rates. Most people use debit cards.
 
 ## Currency Exchange
 *   **Apps**: Use `rate.am` to find the best exchange rates.
 *   **Locations**: Banks, supermarkets (SAS often has good rates), and exchange kiosks.
 
 ## Loans
-*   **Guarantors**: Often required. A guarantor must be a legal adult, resident/citizen, with steady income. They take on full responsibility if you default.
+*   **Types**: Consumer, car, student, mortgage, business.
+*   **Guarantors**: Often required. A guarantor must be:
+    *   A legal adult.
+    *   A resident/citizen with steady income.
+    *   Available in person to sign.
+*   **Risks**: The guarantor takes on full responsibility (debt, interest, fees) if you default. This can lead to loss of assets and impact their own credit history.
 
 ## Savings Accounts
 *   **Interest Rates**: AMD accounts offer the highest rates (up to ~10%), followed by USD, then EUR.
 *   **Tax**: 10% income tax is deducted from interest earned.
+*   **Examples** (approximate as of 2025):
+    *   *Acba*: 5-11% (AMD)
+    *   *Araratbank*: ~9% (AMD)
+    *   *Artsakhbank*: ~8.5% (AMD)
+    *   *Amio*: ~8.75% (AMD)
+    *   *Converse*: ~8.8-9% (AMD, Privé)
+    *   *Evocabank*: ~8% (AMD)
+    *   *ID Bank*: 4.55-10% (AMD)
+    *   *Inecobank*: 4.5-9.25% (AMD)
+    *   *VTB*: Up to 9.5% (AMD)
 
 *(See specific bank websites for current deposit terms)*
