--- a/content/move/arrival.mdx
+++ b/content/move/arrival.mdx
@@ -8,23 +8,23 @@ description: Airport information and transportation
 You've made it! Most arrivals are via **Zvartnots International Airport** (Yerevan) or **Gyumri Airport**. You may also arrive by land from Georgia or Iran.
 
 ## Zvartnots Airport to City Center
-The airport is about 20 minutes from the city center.
+The airport is about 20 minutes from the city center. You have the option of taking a taxi, public transportation, or the airport shuttle bus.
 
 ### Transportation Options
 
 | Option | Cost | Notes |
 | :--- | :--- | :--- |
-| **Taxi** | 2,000 - 6,000 AMD | Negotiate price if taking a personal taxi. Apps: GG, Yandex Taxi, Utaxi. |
-| **Express Bus No. 201** | 300 AMD | Departs every 30 mins (07:00 - 22:00). Goes to Republic Square. Has WiFi. |
-| **Public Bus No. 100** | Check current fares | Connects city center with airport. |
+| **Taxi** | 2,000 - 6,000 AMD | In case you take personal taxi, make sure you negotiate the final price from the beginning. You can also use taxi apps such as GG, Yandex Taxi, Utaxi to order a car. |
+| **Express Bus No. 201** | 300 AMD | Departs every 30 mins (07:00 - 22:00). Complete with WiFi. Takes you to and from Republic Square. You can track the route of the express by clicking [here](https://www.mta.am/en/news/express-bus-yerevan-zvartnots-airport-en/). |
+| **Public Bus No. 100** | Check current fares | Connects city center with Zvartnots Airport. From January 1, 2025 the new fares apply. You can check them [here](https://www.mta.am/en/fares/). |
 
 ## Arriving by Land
 
 ### From Georgia
 - **Route**: Via Bagratashen checkpoint.
 - **Duration**: ~4 hours to Yerevan (221 km).
-- **Train**: From Tbilisi to Sasuntsi Davit station (Yerevan). Takes ~10h but is comfortable.
-- **Cost**: 7,000 - 25,000 AMD.
+- **Train**: If you arrive via train, there is also a train from Tbilisi that takes longer (around 10h) but much more comfortable, bringing you right to the Sasuntsi Davit railway station.
+- **Cost**: Budget between 7,000 and 25,000 AMD for this trip to and from Tbilisi. Please check the schedules [here](https://railway.am/).
 
 ### From Iran
 - **Duration**: ~7.5 hours from the border (380 km).
