--- a/content/move/first-steps.mdx
+++ b/content/move/first-steps.mdx
@@ -8,9 +8,13 @@ description: Essential tasks to complete after arriving in Armenia
 Once you land, there are several administrative tasks to tackle to ensure a smooth transition.
 
 ## 1. Visit Repat Armenia
-Stop by our office for advice and to join the network.
-*   **Address**: Near Republic Square (Contact us for details)
+Visit **Repat Armenia Foundation** for repatriation advice and any repatriation-related questions. Also, we suggest joining the **Armenian Repatriates Network** (12,000 members) for practical tips on different aspects of repatriation and a "soft landing".
+
+**Repat Armenia Foundation**
+*   **Tel**: +374 91 46 46 60
 *   **Email**: repatriation@repatarmenia.org
+*   **Website**: [www.repatarmenia.org](http://www.repatarmenia.org)
+*   **Address**: Near Republic Square (Contact us for details)
 
 ## 2. Get a SIM Card & Internet
 Stay connected immediately.
@@ -23,6 +27,7 @@ Stay connected immediately.
 Opening a bank account is a general necessity. In Armenia, it is used to:
 *   Deposit your money (most have at least two accounts - AMD + USD/EUR/RUB)
 *   Get paid or receive government-provided benefits
+*   Pay for utilities alongside daily purchases
 
 **Process:**
 *   **Documents**: Passport, Social Security Number (SSN), and sometimes proof of registered address (*grantsoum*).
@@ -32,19 +37,32 @@ Opening a bank account is a general necessity. In Armenia, it is used to:
     *   Banks in the city center are busier; try smaller branches or off-peak hours (morning or around 3 PM).
     *   Expect longest wait times around lunch and closing.
 
+<Note>
+Use mobile or online banking where possible. Contact us if you need to open a bank account; we will connect you with our partner bank.
+</Note>
+
 ## 4. Register Your Residence (*Grantsoum*)
-Do this as soon as you have your residency card or citizenship.
+Do this as soon as you have your residency card or citizenship. It is not complex but can be time-consuming.
 1.  Go to your local police station with your card/passport.
 2.  Fill out the form with your address and phone number.
 3.  A police officer will visit your home (usually within a week) to verify you live there (without prior notification).
 4.  Pick up your stamped card/passport at the station.
-*   **Important**: You need a notarized rent contract. Inform your landlord beforehand.
+
+**Important Notes:**
+*   **Contracts**: You need a notarized rent contract. Inform your landlord beforehand.
+*   **Deadlines**: When changing residences, you must notify the territorial authorities **within a week** of the change. You can only be registered at one address at a time.
+*   **Appointments**: You should book an appointment online (check the Migration Service or Police website).
+*   **Landlord Issues**: Sometimes landlords have concerns about rights limitations. If this happens, refer to your district police station or contact lawyers to help resolve the issue.
 
 ## 5. Obtain a Social Security Number (SSN)
 Required for work, banking, and benefits.
-*   **Where**: The same police station where you registered your address.
+*   **Where**: The same police station where you registered your address. You can also get it at the main visa and passport department in **Davtashen**.
 *   **Bring**: Passport with registered address stamp.
-*   **Tip**: Keep a digital scan of your SSN document.
+*   **Tip**: Keep a digital scan of your SSN document; you usually only need the number.
+
+<Note>
+You should book an appointment online for this service.
+</Note>
 
 **You will need your SSN for:**
 *   Opening bank accounts
@@ -56,11 +74,13 @@ Required for work, banking, and benefits.
 *   Disability pensions
 *   Any other government assistance programs
 
+*(See Appendix 3 in original guide for list of passport departments)*
+
 ## 6. Healthcare Registration
 Register at your local **polyclinic** for free basic services.
-1.  Find your nearest polyclinic (see Medical section).
+1.  Find your nearest polyclinic (*See Medical section or Appendix 5*).
 2.  Bring passport/residency card and SSN.
-3.  Sign an agreement.
+3.  Sign an agreement with the polyclinic, marking you their patient.
 
 **Coverage includes:**
 *   Home visit of a physician
