--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -14,23 +14,25 @@ You may be eligible if you are:
 2.  A permanent resident (Special or Permanent status).
 3.  A refugee.
 
-**Residency Requirement**: You must not have lived in Armenia for more than **915 days** (2.5 years) in the last **5 years**.
+**Residency Requirement**: You must not have lived in Armenia for more than **915 days** (2.5 years) in the last **5 years** (or spent at least 9/12 days per year outside of Armenia).
 *   **Registration Deadline**: You must register your address (*grantsoum*) within **180 days** of your actual arrival in Armenia.
-*   **Import Timeframe**: You have **18 months** from obtaining your status/certificate to import goods tax-free.
+*   **Import Timeframe**: You have **18 months** from the date of "arrival for permanent residence" (the day you received your repatriate resident's ID card or citizenship certificate) to import goods tax-free.
+*   **Filing Statement**: If you had already been registered in Armenia, you must file a statement with the customs office within **3 months from the time of entry** into Armenia.
 
 **Alternative Option**: If you haven't lived in Armenia for >12 months in the last 420 days, you can import up to **5,000 EUR** value (excluding cars).
 *   *Note*: You must submit a written request within **60 days** of arrival. This option is available once every 3 years.
 
 ## What You Can Bring
-*   **Personal Items**: Unlimited clothing, books, etc.
-*   **Electronics**: Max 3 of each type (must be used).
-*   **Furniture**: 1 set per room type.
-*   **Car**: 1 vehicle owned for at least 6 months prior to move.
+*   **Personal Items**: Unlimited clothing, books, bedding, home accessories, etc.
+*   **Electronics**: Max 3 of each type for personal and daily purposes (must be used and show wear/tear). If new or in original boxes, they must be cleared through customs.
+*   **Furniture**: 1 complete set of each type of furniture for personal use only.
+*   **Car**: 1 vehicle for personal use that you can prove you've owned for at least 6 months prior to moving.
 
 ### Packing Rules & Restrictions
-*   **Condition**: Items must be **used** (no original sealed packaging).
+*   **Condition**: Items must be **used** (no original sealed packaging or factory labeling).
 *   **Weight**: Boxes should not exceed **25 kg** each.
 *   **Prohibited**: Do not pack liquids, food, medication, or flammable items.
+*   **Do NOT bring**: Paper products, toilet paper, and similar consumables that are easily available in Armenia.
 *   **Pro Tip**: Remove all batteries from toys and electronics.
 *   **Business Use**: Do not bring items for business use, construction materials (pipes, toilets), or large quantities of electronics.
 
@@ -41,8 +43,9 @@ You may be eligible if you are:
     *   *Tip*: Ensure your local contact number is on your boxes so you can be notified of arrival.
 2.  **Apply for Certificate**: Apply at the Passport and Visa Department for a document confirming your move for permanent residence.
     *   *Timeline*: Usually issued within **5 working days**.
-3.  **Submit to Customs**: Send your documents and list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
-    *   *Processing*: Customs should process the application within **3 working days**.
+3.  **Submit to Customs**: The repatriate must file an application for tax-free import with the customs office, specifying the item description and number of items imported.
+    *   Send your documents and list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
+    *   *Processing*: The customs office has up to **10 days** to grant or reject the application.
 4.  **Clear Customs**: Go to the cargo office to pick up items.
     *   *Warehouse Fees*: **Free for the first 48 hours**. After that, fees are ~10,000 - 20,000 AMD per day depending on volume.
 
