--- a/content/move/planning.mdx
+++ b/content/move/planning.mdx
@@ -32,6 +32,7 @@ Gather your documents and their copies. Keep your originals safe.
 - Baptism certificate (translated and apostilled if necessary)
 - Education certifications (translated and notarized)
 - Marriage certificate (translated and apostilled if necessary)
+- Criminal record (apostilled) document for the Vienna convention
 - Driver's license (international unless part of the Vienna convention)
 - Vaccination documentation
 
