--- a/content/move/planning.mdx
+++ b/content/move/planning.mdx
@@ -23,7 +23,7 @@ A pilot trip is highly recommended to discover opportunities. Repat Armenia can 
 - Business consulting and legal agencies
 - Educational institutions
 
-Consider volunteering programs like **Birthright Armenia** or **Armenian Volunteer Corps** to experience the country from the inside.
+Consider volunteering programs like [**Birthright Armenia**](https://birthrightarmenia.org/) or [**Armenian Volunteer Corps**](https://armenianvolunteer.org/) to experience the country from the inside.
 
 ## Step 3: Prepare Documents
 Gather your documents and their copies. Keep your originals safe.
@@ -66,10 +66,10 @@ Moving your financial assets to Armenia may seem difficult, but there are easy w
 ## Step 7: Improve/Learn Armenian
 Eastern Armenian is the official language. Knowledge of Russian and English is also helpful.
 **Ways to learn:**
-1.  **Online**: Apps like **AYOlingo**, or the **Armenian Virtual College**.
+1.  **Online**: Apps like [**AYOlingo**](https://apps.apple.com/us/app/ayolingo-learn-armenian/id1367151083) ([Android](https://play.google.com/store/apps/details?id=org.birthrightarmenia.ayolingo)), or the [**Armenian Virtual College**](https://www.avc-agbu.org/).
 2.  **Private Lessons**: Many tutors are available in Armenia (search on our network).
 3.  **Media**: Read online newspapers, books, or watch Armenian TV/series.
-4.  **Free Classes**: Follow Repat Armenia or the **Repatriation and Integration Center of the Diaspora Office** for free class announcements.
+4.  **Free Classes**: Follow [Repat Armenia language courses](https://www.repatarmenia.org/services-and-programs/armenian-language-courses) or the [**Office of the High Commissioner for Diaspora Affairs**](https://english.hartak.am/services/40b8ba7e-5f81-43f5-b33d-493bd88bee12/online/) ([Facebook](https://www.facebook.com/DiasporaGovAm)) for free class announcements.
 
 ## Step 8: Employment & Business
 Start searching for opportunities early.
