--- a/content/move/arrival.mdx
+++ b/content/move/arrival.mdx
@@ -15,16 +15,16 @@ The airport is about 20 minutes from the city center. You have the option of tak
 | Option | Cost | Notes |
 | :--- | :--- | :--- |
 | **Taxi** | 2,000 - 6,000 AMD | In case you take personal taxi, make sure you negotiate the final price from the beginning. You can also use taxi apps such as GG, Yandex Taxi, Utaxi to order a car. |
-| **Express Bus No. 201** | 300 AMD | Departs every 30 mins (07:00 - 22:00). Complete with WiFi. Takes you to and from Republic Square. You can track the route of the express by clicking [here](https://www.mta.am/en/news/express-bus-yerevan-zvartnots-airport-en/). |
-| **Public Bus No. 100** | Check current fares | Connects city center with Zvartnots Airport. From January 1, 2025 the new fares apply. You can check them [here](https://www.mta.am/en/fares/). |
+| **Express Bus No. 201** | 300 AMD | Departs every 30 mins (07:00 - 21:30). Complete with WiFi. Takes you to and from Republic Square. You can track the route of the express by clicking [here](https://t-armenia.com/en/yerevan-airport-shuttle-bus). |
+| **Public Bus No. 100** | 100 AMD | Connects city center with Zvartnots Airport. From January 1, 2025, cashless payment only via transport cards. You can check fares [here](https://t-armenia.com/en/fares). |
 
 ## Arriving by Land
 
 ### From Georgia
 - **Route**: Via Bagratashen checkpoint.
 - **Duration**: ~4 hours to Yerevan (221 km).
-- **Train**: If you arrive via train, there is also a train from Tbilisi that takes longer (around 10h) but much more comfortable, bringing you right to the Sasuntsi Davit railway station.
-- **Cost**: Budget between 7,000 and 25,000 AMD for this trip to and from Tbilisi. Please check the schedules [here](https://railway.am/).
+- **Train**: If you arrive via train, there is also a train from Tbilisi that takes longer (around 10h) but much more comfortable, bringing you right to the Sasuntsi Davit railway station. Train 371 departs Tbilisi at 20:20 and arrives in Yerevan at 06:55 the next day (operates on odd-numbered days).
+- **Cost**: Budget between 7,000 and 25,000 AMD for this trip to and from Tbilisi. Please check the schedules [here](https://www.railway.ge/en/traffic-general-schedule/) or [here](https://t-armenia.com/).
 
 ### From Iran
 - **Duration**: ~7.5 hours from the border (380 km).
